# hc32l196-demo

./: .clang-format  .clangd  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  clang-format  pyocd.yaml
App/src/: app_main.c
Bsp/inc/: board_stkhc32l19x.h
Common/: printf-stdarg.h  printf.c  printf.h
Core/: CMakeLists.txt
Core/bsp/: board_stkhc32l19x.h
Core/cmsis/Device/HDSC/HC32L19X/Include/: base_types.h  system_hc32l19x.h
Core/cmsis/Device/HDSC/HC32L19X/Source/ARM/: startup_hc32l19x.s
Core/common/: cortex_m_ll.h  interrupts_hc32l19x.c  irq_handler.c  main.h
Core/components/cm_backtrace/: cm_backtrace.c  cm_backtrace.h  cmb_cfg.h
Core/components/segger_rtt/: SEGGER_RTT_Conf.h
Core/components/tiny_printf/: tiny_printf.c  tiny_printf.h
Core/hal/inc/: hal_gpio.h
Core/hal/src/: hal_gpio.c  hal_lpuart.c
Core/inc/: SEGGER_RTT_Conf.h  interrupts_hc32l19x.h  main.h  printf-stdarg.h
Core/mcu/inc/: adc.h  adt.h  bt.h  crc.h  ddl.h  gpio.h  i2c.h  lcd.h  lpm.h  lptim.h  lpuart.h  lvd.h  opa.h  sysctrl.h  timer3.h  vc.h
Core/mcu/src/: adc.c  bgr.c  bt.c  dac.c  ddl.c  flash.c  gpio.c  lcd.c  lpm.c  lptim.c  lpuart.c  opa.c  reset.c  rtc.c  spi.c  sysctrl.c  vc.c
Core/src/: interrupts_hc32l19x.c  main.c  printf-stdarg.c
Device/: HC32L196PC_ARMCC.ld  HC32L196PC_GCC.ld  erase_mcu.jlink  flash_mcu.jlink  hc32l19x.jflash  reset_mcu.jlink
Device/EWARM/: HC32L19X.svd
Device/EWARM/config/: hc32l19x_ram.icf
Device/EWARM/config/flashloader/: FlashHC32L19X.flash  HC32L19X.board
Device/MDK/: HC32L19X.sfr
Device/MDK/config/: HC32L19x_256KB.FLM
Drivers/cmsis/Device/HDSC/HC32L19X/Include/: hc32l19x.h  system_hc32l19x.h
Drivers/cmsis/Device/HDSC/HC32L19X/Source/: system_hc32l19x.c
Drivers/cmsis/Device/HDSC/HC32L19X/Source/GCC/: startup_hc32l19x.s
Drivers/mcu/inc/: aes.h  bgr.h  dac.h  ddl.h  debug.h  dmac.h  flash.h  pca.h  pcnt.h  ram.h  reset.h  rtc.h  spi.h  trim.h  trng.h  uart.h  wdt.h
Drivers/mcu/src/: adt.c  aes.c  crc.c  ddl.c  debug.c  dmac.c  flash.c  i2c.c  lvd.c  pca.c  pcnt.c  ram.c  spi.c  sysctrl.c  timer3.c  trim.c  trng.c  uart.c  wdt.c
Log/: hal_lpuart.c  hal_lpuart.h  printf.c  printf.h
Log/tiny_printf/: tiny_printf.c  tiny_printf.h
Log/trice/: cobs.h
cmake/: binutils.cmake  flash.cmake  flash_mcu.jlink.in  gcc-arm-none-eabi.cmake  gdb-helper.cmake  hc32l19x.cmake  launch.json.in
